@@ -1,0 +1,25 @@
+<?php
+// $Id$
+
+/**
+ * @file
+ * Compact Forms installation functions.
+ */
+
+/**
+ * Implementation of hook_uninstall().
+ */
+function compact_forms_uninstall() {
+  variable_del('compact_forms_colons');
+  variable_del('compact_forms_stars');
+  variable_del('compact_forms_field_size');
+  variable_del('compact_forms_descriptions');
+}
+
+/**
+ * Remove 'compact_forms_colons' variable.
+ */
+function compact_forms_update_7000() {
+  variable_del('compact_forms_colons');
+}
+
